--- a/src/styles/sections/header/header.scss
+++ b/src/styles/sections/header/header.scss
@@ -66,7 +66,7 @@
     background: none;
     border: none;
     outline: none;
-
+    padding: 0;
     @include tablets {
       display: block;
     }
